[tool.poetry]
name = "dagster-demo"
version = "0.1.0"
description = ""
authors = ["b349zhan <b349zhan@uwaterloo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dagster = "^1.6.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "dagster_demo"